Fix for charset + text wrapping improvements

--- a/frontend/html/styles.css
+++ b/frontend/html/styles.css
@@ -18,6 +18,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 }
 
 #header h1 {
